# NLP_LLM

./: README.md  main.py  model.py  pyproject.toml
src/: config.py  corrector.py  translator.py
