[tool.poetry]
name = "nlp-llm"
version = "0.1.0"
description = ""
authors = ["0xGeN02 <manuelmateodgl02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
llama-cpp-python = "^0.3.8"
streamlit = "^1.44.1"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
pypdf = "^5.4.0"
unstructured = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
