[tool.poetry]
name = "nlp-llm"
version = "0.1.0"
description = ""
authors = ["0xGeN02 <manuelmateodgl02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.3.8"
streamlit = "^1.44.1"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
unstructured = "^0.17.2"
language-tool-python = "^2.9.2"
transformers = "4.30.2"
torch = "^2.6.0"
accelerate = "^1.6.0"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
ollama = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
